// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminProjectEdition /> lets you add an idea when on the ideas tab 1`] = `"/projects/continuousIdeation_slug/ideas/new"`;

exports[`<AdminProjectEdition /> lets you see the project 1`] = `"/projects/continuousInformation_slug"`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a continuous information project 1`] = `
Array [
  "/admin/projects/continuousInformation/edit",
  "/admin/projects/continuousInformation/description",
  "/admin/projects/continuousInformation/events",
  "/admin/projects/continuousInformation/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a continuous non-typeform survey project 1`] = `
Array [
  "/admin/projects/continuousGoogleForm/edit",
  "/admin/projects/continuousGoogleForm/description",
  "/admin/projects/continuousGoogleForm/events",
  "/admin/projects/continuousGoogleForm/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a continuous typeform survey project 1`] = `
Array [
  "/admin/projects/continuousTypeform/edit",
  "/admin/projects/continuousTypeform/description",
  "/admin/projects/continuousTypeform/survey-results",
  "/admin/projects/continuousTypeform/events",
  "/admin/projects/continuousTypeform/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a continuous typeform survey project if surveys are disabled 1`] = `
Array [
  "/admin/projects/continuousTypeform/edit",
  "/admin/projects/continuousTypeform/description",
  "/admin/projects/continuousTypeform/events",
  "/admin/projects/continuousTypeform/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a continuous typeform survey project if typeform is disabled 1`] = `
Array [
  "/admin/projects/continuousTypeform/edit",
  "/admin/projects/continuousTypeform/description",
  "/admin/projects/continuousTypeform/events",
  "/admin/projects/continuousTypeform/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a timeline project with a googleform survey phase 1`] = `
Array [
  "/admin/projects/timelineIdeation/edit",
  "/admin/projects/timelineIdeation/description",
  "/admin/projects/timelineIdeation/ideas",
  "/admin/projects/timelineIdeation/timeline",
  "/admin/projects/timelineIdeation/events",
  "/admin/projects/timelineIdeation/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a timeline project with a single information phase 1`] = `
Array [
  "/admin/projects/timelineInformation/edit",
  "/admin/projects/timelineInformation/description",
  "/admin/projects/timelineInformation/ideas",
  "/admin/projects/timelineInformation/timeline",
  "/admin/projects/timelineInformation/events",
  "/admin/projects/timelineInformation/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a timeline project with a typeform survey phase 1`] = `
Array [
  "/admin/projects/timelineIdeation/edit",
  "/admin/projects/timelineIdeation/description",
  "/admin/projects/timelineIdeation/ideas",
  "/admin/projects/timelineIdeation/survey-results",
  "/admin/projects/timelineIdeation/timeline",
  "/admin/projects/timelineIdeation/events",
  "/admin/projects/timelineIdeation/permissions",
]
`;

exports[`<AdminProjectEdition /> renders the correct set of tabs for a timeline project with an ideation phase 1`] = `
Array [
  "/admin/projects/timelineIdeation/edit",
  "/admin/projects/timelineIdeation/description",
  "/admin/projects/timelineIdeation/ideas",
  "/admin/projects/timelineIdeation/ideaform",
  "/admin/projects/timelineIdeation/timeline",
  "/admin/projects/timelineIdeation/events",
  "/admin/projects/timelineIdeation/permissions",
]
`;
